// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeout Decorator should add metadata 1`] = `
{
  "name": "test_timeout",
  "target": [Function],
}
`;

exports[`Timeout Decorator should add metadata with custom options 1`] = `
{
  "name": "custom_name",
  "target": [Function],
}
`;
